# database-projects

./: .coverage  .gitignore  .gitmodules  README.md  requirements.txt
P1/: .coverage  pyproject.toml  report.html  requirements.txt
P1/flaskr/: cart.py  checkout.py  landing.py  products.py
P1/flaskr/static/: .style.css.swp
P1/flaskr/templates/: base.html
P1/flaskr/templates/cart/: checkout.html
P1/flaskr/templates/orders/: orders.html
P1/flaskr/templates/user/: login.html  register.html
P1/tests/: data.sql  test_app.py  test_cart.py  test_checkout.py  test_factory.py  test_landing.py  test_products.py  test_user.py
P2/Rent Management System/: README.md  schema.sql  schema.txt
PA3/: .gitignore  README.md  readme.txt  requirements.txt
PA3/flaskr/: __init__.py  db.py  schema.sql  seed.sql
PA3/flaskr/templates/: bill_detail.html  bill_payment.html  dashboard.html  index.html  payment_detail.html  (+2 more)
PA3/tests/: conftest.py  data.sql  test_bill.py  test_db.py  test_export.py  test_init.py  test_main.py  test_unit.py
flaskr/: .__init__.py.swp  .cart.py.swp  .db.py.swp  .products.py.swp  .schema.sql.swp  __init__.py  cart.py  checkout.py  db.py  landing.py  orders.py  products.py  schema.sql  user.py
flaskr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flaskr/static/: .style.css.swo  .style.css.swp  style.css
flaskr/templates/: base.html  landing.html
tests/: conftest.py  data.sql  test_app.py  test_cart.py  test_checkout.py  test_db.py  test_factory.py  test_helpers.py  test_landing.py  test_orders.py  test_products.py  test_user.py
(+20 files in other folders)
